--- a/css/style.css
+++ b/css/style.css
@@ -1928,7 +1928,29 @@ div[class$="-container"] {
 }
 
 /*********************************************************************************************/
+/* Плавно спускаем модальное окно*/
+@keyframes bounce {
+    0% { transform: translateY(-2000px); }
+    70% { transform: translateY(30px); }
+    90% { transform: translateY(-10px); }
+    100% { transform: translateY(0); }
+}
+
 /* Стили для реализации модального окна write-us */
 .modal-show {
     display: block;
+    animation-name: bounce;
+    animation-duration: 600ms; /*не работает при 0.6s; почему?*/
+}
+
+/*трясем форму в случае ошибочной отправки*/
+@keyframes shake {
+    0%, 100% { transform: translateX(0);}
+    10%, 30%, 50%, 70%, 90% { transform: translateX(-10px);}
+    20%, 40%, 60%, 80% { transform: translateX(10px);} 
+}
+
+.modal-error {
+    animation-name: shake;
+    animation-duration: 600ms;
 }
